--- a/NAWA_CLIENT/back_end/package.json
+++ b/NAWA_CLIENT/back_end/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,7 +25,9 @@
     "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
+    "resend": "^4.5.1",
     "validator": "^13.15.0"
   }
 }
